--- a/config.json
+++ b/config.json
@@ -1,13 +1,27 @@
 {
-  "source": ["tokens/**/*.json"],
+  "source": ["tokens/**/*.json5"],
   "platforms": {
-    "scss": {
-      "transformGroup": "scss",
-      "buildPath": "build/scss/",
+    "css": {
+      "transformGroup": "css",
+      "buildPath": "build/css/",
       "files": [{
-        "destination": "_variables.scss",
-        "format": "scss/variables"
+        "destination": "variables.css",
+        "format": "css/variables"
       }]
+    },
+    "ts": {
+      "transformGroup": "js",
+      "buildPath": "build/js/",
+      "files": [
+        {
+          "format": "javascript/es6",
+          "destination": "colors.js"
+        },
+        {
+          "format": "typescript/es6-declarations",
+          "destination": "colors.d.ts"
+        }
+      ]
     }
   }
 }
