--- a/tokens/semantic-base/color.json5
+++ b/tokens/semantic-base/color.json5
@@ -6,13 +6,293 @@
   semanticBase: {
     color: {
       background: {
-
+        default: {
+          primary: {
+            value: '{base.color.white.value}',
+          },
+          secondary: {
+            value: '{base.color.gray.050.value}'
+          },
+          disabled: {
+            value: '{base.color.gray.100.value}'
+          },
+          invertedPrimary: {
+            '@': {
+              value: '{base.color.black.value}'
+            },
+            hover: {
+              value: '{base.color.gray.800.value}'
+            },
+          },
+          invertedSecondary: {
+            value: '{base.color.gray.600.value}'
+          },
+        },
+        gray: {
+          '@': {
+            value: '{base.color.red.100.value}'
+          },
+          hover: {
+            value: '{base.color.red.200.value}'
+          },
+        },
+        red: {
+          '@': {
+            value: '{base.color.red.100.value}'
+          },
+          hover: {
+            value: '{base.color.red.200.value}'
+          },
+        },
+        orange: {
+          '@': {
+            value: '{base.color.orange.100.value}'
+          },
+          hover: {
+            value: '{base.color.orange.200.value}'
+          },
+        },
+        yellow: {
+          '@': {
+            value: '{base.color.yellow.100.value}'
+          },
+          hover: {
+            value: '{base.color.yellow.200.value}'
+          },
+        },
+        green: {
+          '@': {
+            value: '{base.color.green.100.value}'
+          },
+          hover: {
+            value: '{base.color.green.200.value}'
+          },
+        },
+        blue: {
+          '@': {
+            value: '{base.color.blue.100.value}'
+          },
+          hover: {
+            value: '{base.color.blue.200.value}'
+          },
+        },
+        indigo: {
+          '@': {
+            value: '{base.color.indigo.100.value}'
+          },
+          hover: {
+            value: '{base.color.indigo.200.value}'
+          },
+        },
+        deepPurple: {
+          '@': {
+            value: '{base.color.deepPurple.100.value}'
+          },
+          hover: {
+            value: '{base.color.deepPurple.200.value}'
+          },
+        },
+        purple: {
+          '@': {
+            value: '{base.color.purple.100.value}'
+          },
+          hover: {
+            value: '{base.color.purple.200.value}'
+          },
+        },
+        pink: {
+          '@': {
+            value: '{base.color.pink.100.value}'
+          },
+          hover: {
+            value: '{base.color.pink.200.value}'
+          },
+        },
       },
       icon: {
-
+        default: {
+          '@': {
+            value: '{base.color.gray.600.value}'
+          },
+          focus: {
+            value: '{base.color.black.value}'
+          },
+          muted: {
+            value: '{base.color.gray.300.value}'
+          },
+          inverted: {
+            value: '{base.color.white.value}'
+          },
+        },
+        red: {
+          '@': {
+            value: '{base.color.red.500.value}'
+          },
+          hover: {
+            value: '{base.color.red.600.value}'
+          },
+        },
+        orange: {
+          '@': {
+            value: '{base.color.orange.500.value}'
+          },
+          hover: {
+            value: '{base.color.orange.600.value}'
+          },
+        },
+        yellow: {
+          '@': {
+            value: '{base.color.yellow.500.value}'
+          },
+          hover: {
+            value: '{base.color.yellow.600.value}'
+          },
+        },
+        green: {
+          '@': {
+            value: '{base.color.green.500.value}'
+          },
+          hover: {
+            value: '{base.color.green.600.value}'
+          },
+        },
+        blue: {
+          '@': {
+            value: '{base.color.blue.500.value}'
+          },
+          hover: {
+            value: '{base.color.blue.600.value}'
+          },
+        },
+        indigo: {
+          '@': {
+            value: '{base.color.indigo.500.value}'
+          },
+          hover: {
+            value: '{base.color.indigo.600.value}'
+          },
+        },
+        deepPurple: {
+          '@': {
+            value: '{base.color.deepPurple.500.value}'
+          },
+          hover: {
+            value: '{base.color.deepPurple.600.value}'
+          },
+        },
+        purple: {
+          '@': {
+            value: '{base.color.purple.500.value}'
+          },
+          hover: {
+            value: '{base.color.purple.600.value}'
+          },
+        },
+        pink: {
+          '@': {
+            value: '{base.color.pink.500.value}'
+          },
+          hover: {
+            value: '{base.color.pink.600.value}'
+          },
+        },
       },
       line: {
-
+        default: {
+          '@': {
+            value: '{base.color.gray.200.value}'
+          },
+          hover: {
+            value: '{base.color.gray.400.value}'
+          },
+          amplified: {
+            value: '{base.color.gray.600.value}'
+          },
+          muted: {
+            value: '{base.color.gray.100.value}'
+          },
+          disabled: {
+            value: '{base.color.gray.300.value}'
+          },
+          inverted: {
+            value: '{base.color.white.value}'
+          },
+          focus: {
+            value: '{base.color.black.value}'
+          },
+        },
+        red: {
+          '@': {
+            value: '{base.color.red.200.value}'
+          },
+          hover: {
+            value: '{base.color.red.400.value}'
+          },
+        },
+        orange: {
+          '@': {
+            value: '{base.color.orange.200.value}'
+          },
+          hover: {
+            value: '{base.color.orange.400.value}'
+          },
+        },
+        yellow: {
+          '@': {
+            value: '{base.color.yellow.200.value}'
+          },
+          hover: {
+            value: '{base.color.yellow.400.value}'
+          },
+        },
+        green: {
+          '@': {
+            value: '{base.color.green.200.value}'
+          },
+          hover: {
+            value: '{base.color.green.400.value}'
+          },
+        },
+        blue: {
+          '@': {
+            value: '{base.color.blue.200.value}'
+          },
+          hover: {
+            value: '{base.color.blue.400.value}'
+          },
+        },
+        indigo: {
+          '@': {
+            value: '{base.color.indigo.200.value}'
+          },
+          hover: {
+            value: '{base.color.indigo.400.value}'
+          },
+        },
+        deepPurple: {
+          '@': {
+            value: '{base.color.deepPurple.200.value}'
+          },
+          hover: {
+            value: '{base.color.deepPurple.400.value}'
+          },
+        },
+        purple: {
+          '@': {
+            value: '{base.color.purple.200.value}'
+          },
+          hover: {
+            value: '{base.color.purple.400.value}'
+          },
+        },
+        pink: {
+          '@': {
+            value: '{base.color.pink.200.value}'
+          },
+          hover: {
+            value: '{base.color.pink.400.value}'
+          },
+        },
       },
       text: {
         default: {
@@ -28,7 +308,79 @@
           inverted: {
             value: '{base.color.white.value}'
           },
-        }
+        },
+        red: {
+          '@': {
+            value: '{base.color.red.600.value}'
+          },
+          hover: {
+            value: '{base.color.red.700.value}'
+          },
+        },
+        orange: {
+          '@': {
+            value: '{base.color.orange.600.value}'
+          },
+          hover: {
+            value: '{base.color.orange.700.value}'
+          },
+        },
+        yellow: {
+          '@': {
+            value: '{base.color.yellow.600.value}'
+          },
+          hover: {
+            value: '{base.color.yellow.700.value}'
+          },
+        },
+        green: {
+          '@': {
+            value: '{base.color.green.600.value}'
+          },
+          hover: {
+            value: '{base.color.green.700.value}'
+          },
+        },
+        blue: {
+          '@': {
+            value: '{base.color.blue.600.value}'
+          },
+          hover: {
+            value: '{base.color.blue.700.value}'
+          },
+        },
+        indigo: {
+          '@': {
+            value: '{base.color.indigo.600.value}'
+          },
+          hover: {
+            value: '{base.color.indigo.700.value}'
+          },
+        },
+        deepPurple: {
+          '@': {
+            value: '{base.color.deepPurple.600.value}'
+          },
+          hover: {
+            value: '{base.color.deepPurple.700.value}'
+          },
+        },
+        purple: {
+          '@': {
+            value: '{base.color.purple.600.value}'
+          },
+          hover: {
+            value: '{base.color.purple.700.value}'
+          },
+        },
+        pink: {
+          '@': {
+            value: '{base.color.pink.600.value}'
+          },
+          hover: {
+            value: '{base.color.pink.700.value}'
+          },
+        },
       },
     }
   }
